--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 
 	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-api")
 	compileOnly project(":modules:backend-cache-builder:backend-cache-builder-service")
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-text
+	compileOnly group: 'org.apache.commons', name: 'commons-text', version: '1.8'
 
 	testCompile group: "junit", name: "junit", version: "4.12"
 }	
