--- a/modules/backend-api-rest/src/main/resources/content/Language.properties
+++ b/modules/backend-api-rest/src/main/resources/content/Language.properties
@@ -1,1 +1,25 @@
 chao=Chào
+barcode.filename=barcode/%s.png
+attachment.filename=attachment; filename="%s"
+http.header.bearer=Bearer %s
+query.sort=%s_sortable
+ngsp.ctdn.message.notfound=Không tìm thấy thông tin doanh nghiệp
+ngsp.ctdn.message.notcorrect=Thông tin tên doanh nghiệp có thể chưa đúng!
+ngsp.ctdn.message.representatives.notcorrect=Chủ sở hữu doanh nghiệp có thể thông tin chưa chính xác!
+jcaptcha.filename=jcaptcha/%s.png
+jcaptcha.message.notcorrect=Captcha incorrect
+jcaptcha.description.notcorrect=Captcha incorrect
+api.permission.message.nothavepermission=User not permission process!
+citizen.dantoc.default=Không rõ
+citizen.nhommau.default=00
+citizen.quoctich.default=Viet Nam
+backupmaster.filename=backupmaster%d.zip
+dict.filename=dicts/%s.xml
+report.filename=reports/%s.xml
+report.template.part.filename=reports/%s_%s.xml
+form.template.part.filename=forms/%s_%s.json
+form.filename=forms/%s.json
+serviceinfo.filename=services/%s.xml
+servicefiletemplate.filename=files/%s
+template.filename=templates/%s.xml
+process.filename=processes/%s.xml
